--- a/templates/index-T.html
+++ b/templates/index-T.html
@@ -7,6 +7,8 @@
   </head>
   <body>
     <img src="/static/assets/images/logo-A.png" alt="Company Logo" class="logo" id="logo">
+    <h1>Контрольная проверка</h1>
+    <img src="/static/assets/images/img.png" alt="Company Logo" class="logo" id="logo_cemat">
     <div id="container">
       <input id="input" type="text" placeholder="Введите название, атрибут или штрихкод товара" />
       <button id="searchButton">Поиск</button>
